--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,100 @@
-.App {
+.task {
+  width: 50vw;
+  border-radius: 1vw;
+  margin: 0 auto 0 auto;
+  padding: 1vh 2vw 2vh 2vw;
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.151);
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  transition: all .2s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.dateEdit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+  transition: all .2s ease-in-out;
+  width: 20%;
+  margin: 0;
+  margin: 0 30% 0 40%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dateEdit>button {
+  opacity: 0;
+  transition: all .2s ease-in-out;
+}
+
+.dateEdit:hover>button {
+  opacity: 1;
+}
+
+.dateEdit:hover {
+  gap: 2vw;
+}
+
+.description, textarea {
+  margin: 3vh auto;
+  width: 80%;
+}
+
+.task > button {
+  width: 40%;
+  height: 5vh;
+  transition: all .2s ease;
+  color: white;
+  border-radius: .5vw;
+  font-size: 1.3rem;
+  border: white 2px solid;
+}
+
+.task.uncompleted>button,.task.completed {
+  background: green;
+}
+
+.task.uncompleted>button:hover {
+  background: rgb(18, 207, 18);
+}
+
+.task.completed>button, .task.uncompleted {
+  background: darkred;
+}
+
+.task.completed>button:hover {
+  background: red;
+}
+
+.clearbutton {  
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 1vw 1vh;
+  background: none;
+  border: none;
+  color: white;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+input, textarea, p {
+  text-align: center;
+  color: white;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  background: none;
+  border:none;
+}
+
+input:hover, textarea:hover {
+  background-color: rgba(211, 211, 211, 0.226);
+}
+
+svg {
+  width: 2vw;
+  height: 2vw;
+  padding: none; 
+  margin: none;
 }
